WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
239085
Crash under ShareableBitmap::makeCGImageCopy()
https://bugs.webkit.org/show_bug.cgi?id=239085
Summary
Crash under ShareableBitmap::makeCGImageCopy()
Simon Fraser (smfr)
Reported
2022-04-11 13:20:33 PDT
Crash under ShareableBitmap::makeCGImageCopy()
Attachments
Patch
(1.76 KB, patch)
2022-04-11 13:21 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2022-04-11 13:21:39 PDT
Created
attachment 457279
[details]
Patch
Simon Fraser (smfr)
Comment 2
2022-04-11 13:21:43 PDT
<
rdar://problem/91073153
>
EWS
Comment 3
2022-04-11 16:40:40 PDT
Committed
r292737
(
249521@main
): <
https://commits.webkit.org/249521@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 457279
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug