Crash under ShareableBitmap::makeCGImageCopy() https://bugs.webkit.org/show_bug.cgi?id=239085 <rdar://91073153>

Reviewed by Wenson Hsieh.

ShareableBitmap::create() can return null, so check it before calling makeCGImageCopy()
on the result.

* Shared/RemoteLayerTree/RemoteLayerBackingStore.mm:
(WebKit::RemoteLayerBackingStore::applyBackingStoreToLayer):

Canonical link: https://commits.webkit.org/249521@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@292737 268f45cc-cd09-0410-ab3c-d52691b4dbfc